audit bugs fixed
